@@ -1,3 +1,7 @@
+2004-10-28 Hasso Tepper <hasso at quagga.net>
+
+	* interface.c: Remove dead "ip tunnel" command.
+
 2004-10-22 Paul Jakma <paul@dishone.st>
 
 	* irdp_main.c: change setsockopt_pktinfo to setsockopt_ifindex
